--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
