--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@react-oauth/google": "^0.12.1",
     "mongodb": "^6.10.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/google.accounts": "^0.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
