--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "mongodb": "^6.10.0",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18"
   },
