--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -14,7 +14,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "next": "14.2.15",
-    "next-auth": "^4.24.10",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18"
   },
