--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@react-oauth/google": "^0.12.1",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "14.2.15",
@@ -19,6 +20,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/google.accounts": "^0.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
