--- a/fashion-app/package.json
+++ b/fashion-app/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
